logo left menu right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
 
 /* ------------------------- Colours --*/
 
+body {
+    background-color: #C9C8C8;
+}
 
 /* ------------------------- Containers --*/
 
