put nav heading in a container so only display on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 h1 {
     font-family: "Alegraya", sans-serif;
     font-weight: 200;
-    font-size: 30px;
+    font-size: 100%;
     margin-top: 0px;
     padding: 0;
     color: #00867d;
