--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 
 /* ------------------------- Colours --*/
 
-.navbar-nav li {
+.navbar-nav li a {
     color: #00867d;
 }
 
@@ -42,6 +42,25 @@ h1 {
 }
 
 /* ------------------------- Footer*/
+footer {
+    min-height: 100px;
+    margin: 0;
+     text-align: center;
+ }
+
 .footer-row i {
-    color: #00867d;
+    font-size: 20px;
+    color: #00867d;   
+}
+#contact-icon li a i {
+ text-align: center;
+}
+
+.social-links li a i{
+   width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    line-height: 7px;
+    text-align: center;
 }
