--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,11 @@ h1 {
     color: #00867d;
     text-align: right;
 }
-
+#why-h1 {
+   text-align: center;
+   font-size: 130%;
+   font-weight: 300;
+}
 /* ------------------------- Navigation Bar*/
 
 
