changed how do food pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,17 @@ h3 {
 .recipe-row {
     padding-bottom: 30px;
 }
+.food-pic {
+    background: url("../images/breakfast-oat-unsplash.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+}
+
 
 /* ------------------------- Footer*/
 
@@ -100,7 +111,8 @@ footer {
     margin: 0;
     position: absolute;
     bottom: 0;
-    height: 150px;
+    padding-bottom: 0;
+    height: 80px;
  }
  .footer-row {
      text-align: center;
