--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ h2 {
     font-family: "Alegraya+Sans", sans-serif;
     font-weight: 500;
     color: #3f3f3f;
+    text-align: center;
 }
 
 h3 {
@@ -93,6 +94,11 @@ h3 {
 .recipe-row {
     padding-bottom: 30px;
 }
+
+.recipe-row p {
+    text-align: center;
+}
+
 .food-pic {
     background: url("../images/breakfast-oat-unsplash.jpg");
     background-position: center;
