add frog pic for background to challenge page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,8 +110,52 @@ h3 {
     -webkit-transition: all .5s ease-in-out;
 }
 
+/* ------------------------- Challange Form Page */
 
-/* ------------------------- Footer*/
+#frog-pic {
+    background: url("../images/frog-pixabay.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 600px;
+    width: 100%
+  }
+
+    #frog-outer{
+    height:600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+ /* #hero-image{
+    height:600px;
+    width: 100%;
+    background: url("http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
+    /* sets the amination of the @keyframes below 
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+  }
+    #hero-outer{
+    height:600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+@keyframes hero-zoom{
+  from{
+    transform: scale(1); /*100%
+  }
+  to{
+    transform: scale(1.1); /*110%
+  }
+}
+  */
+
+
+
+/* ------------------------- Footer */
 
 footer {
     margin: 0;
