--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,24 +68,37 @@ h3 {
 }
 
 /* ------------------------- Home Page*/
-/*
+
 .main-box {
     display: inline-block;
     border: 2px dotted;
 }
+
 .pic-box {
     display: inline-block;
     background: red;
+    
     height: 400px;
-    width:400px;
+    width: 50%
 }
-*/
+
 #pig-pic {
-    height: 341px;
+    top: 100px;
+    left: 250px;
+    position: relative;
+    float: left;
+    background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    min-height: 341px;
     width: 556px;
     background-position-x: 221;
     background-position-y: 362;
-   border: 15px solid green;
+  
+    
+ 
 
 }
 
@@ -96,16 +109,6 @@ h3 {
 }
 
 
-.box {
- display: inline-block;
- background: red;
- width: 100px;
- height: 100px;
-}
-#two {
-  background: green;
-}
-*/
 
 /* ------------------------- Why Main Body*/
 .why-pictures {
@@ -148,6 +151,9 @@ h3 {
 .food-pic {
     background: url("../images/breakfast-oat-unsplash.jpg") no-repeat center center;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     min-height: 300px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
