--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,11 @@ h3 {
     z-index: -2;
 }
 
+#ready-btn {
+    color:  #3f3f3f;
+    background-color: #e57373;
+    border-color:#e57373;  
+}
 
 
 /* ------------------------- Why Main Body*/
