--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h2 {
     text-align: center;
 }
 #together a {
-    top: 250px;
+    top: 210px;
     left: 50px;
     position: relative;
     color: #00867d;
@@ -117,7 +117,15 @@ h3 {
 #ready-btn {
     color:  #3f3f3f;
     background-color: #e57373;
-    border-color:#e57373;  
+    border-color:#e57373; 
+    bottom: -20px;
+    left: 280px;
+    position: absolute;
+    min-height: 60px;
+    width: 110%;
+    text-align: center;
+    font-weight: 700;
+    z-index: -3;
 }
 
 
