--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,17 +20,17 @@ header {
 h1 {
     font-family: "Alegreya+Sans", sans-serif;
     font-weight: 700;
-    font-size: 100%;
+    font-size: 130%;
     margin-top: 0px;
     padding: 0;
     color: #00867d;
     text-align: right;
-}
+    }
 #why-h1 {
    text-align: center;
-   font-size: 130%;
-   font-weight: 300;
-}
+   padding-bottom: 10px;
+  
+ }
 
 h2 {
     font-family: "Alegreya+Sans", sans-serif;
