--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,7 @@ h3 {
 /* ------------------------- Home Page*/
 
 .pig-pic {
-   
-   
+    
     background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
     background-size: cover;
     -webkit-background-size: cover;
@@ -81,6 +80,16 @@ h3 {
     min-height: 450px;
     width: 40%;
     z-index: -1;
+}
+
+.basic-details {
+    margin-left:150px;
+    min-height: 350px;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(140, 249, 31, 0.7);
+    font-weight: 700;
+    z-index: -2;
 }
 
 /*
