--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h3 {
     -moz-background-size: cover;
     -o-background-size: cover;
     min-height: 450px;
-    width: 40%;
+    width: 100%;
     z-index: -1;
 }
 
@@ -90,6 +90,19 @@ h3 {
     background-color: rgba(140, 249, 31, 0.7);
     font-weight: 700;
     z-index: -2;
+}
+
+#ready-btn {
+    color:  #3f3f3f;
+    background-color: #e57373;
+    border-color:#e57373; 
+    bottom: -20px;
+    left: 280px;
+    min-height: 60px;
+    width: 200%;
+    text-align: center;
+    font-weight: 700;
+    z-index: -3;
 }
 
 /*
@@ -104,19 +117,7 @@ h3 {
           opacity: 0.9;            
 }
 
-.pig-pic {
-    top: 80px;
-    left: 600px;
-    position: relative;
-    background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    min-height: 450px;
-    width: 40%;
-    z-index: -1;
-}
+
 
 
 .basic-details {
