style the together text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,14 @@ h3 {
 
 /* ------------------------- Home Page*/
 
+#together a {
+    top: 100px;
+    left: 300px;
+    position: absolute;
+       color: #00867d;
+    text-decoration: none;
+    font-size: 150%;
+}
 .pig-pic {
     
     background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
@@ -79,6 +87,8 @@ h3 {
     -o-background-size: cover;
     min-height: 450px;
     width: 100%;
+    margin-left: 200px;
+    margin-bottom: -100px;
     z-index: -1;
 }
 
