made heading and navbar responsive font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header {
 h1 {
     font-family: "Alegreya+Sans", sans-serif;
     font-weight: 700;
-    font-size: 130%;
+    font-size: 2rem;
     margin-top: 0px;
     padding: 0;
     color: #00867d;
@@ -53,7 +53,7 @@ h3 {
     margin-bottom: 20px;
     border: 0;
     width: 100%;
-    font-size: 120%;
+    font-size: 2rem;
 }
 
 .navbar-light .nav-item.active .nav-link,
@@ -115,55 +115,7 @@ h3 {
     z-index: -3;
 }
 
-/*
-.main-box {
-    display: inline-block;
-    color:  #3f3f3f;
-}
 
-  .pic-box{
-          width: 150px;
-          height: 150px;
-          opacity: 0.9;            
-}
-
-
-
-
-.basic-details {
-    top: 221px;
-    right: 362px;
-    position: relative;
-    min-height: 350px;
-    width: 60%;
-    text-align: center;
-    background-color: rgba(140, 249, 31, 0.7);
-    font-weight: 700;
-    z-index: -2;
-}
-
-#ready-btn {
-    color:  #3f3f3f;
-    background-color: #e57373;
-    border-color:#e57373; 
-    bottom: -20px;
-    left: 280px;
-    position: absolute;
-    min-height: 60px;
-    width: 110%;
-    text-align: center;
-    font-weight: 700;
-    z-index: -3;
-}
-
-#together a {
-    top: 210px;
-    left: 50px;
-    position: relative;
-    color: #00867d;
-    text-decoration: none;
-}
-*/
 /* ------------------------- Why Main Body*/
 .why-pictures {
     min-height: 140px;
