--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,17 +83,17 @@ h3 {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    min-height: 500px;
+    min-height: 50vmin;
     width: 100%;
     margin-right: 4rem;
     margin-left: 10rem;
-    margin-bottom: -100px;
+    
     z-index: -1;
 }
 
 .basic-details {
     margin-left: 10rem;
-    min-height: 350px;
+    min-height: 30vmin;
     width: 100%;
     text-align: center;
     background-color: rgba(140, 249, 31, 0.7);
@@ -171,7 +171,7 @@ h3 {
 #frog-pic {
     background: url("../images/frog-pixabay.jpg") no-repeat center center;
     background-size: cover;
-    height: 630px;
+    height: 100vh;
     width: 100%;
     /* sets the amination of the @keyframes below */
     animation-name: frog-zoom;
