--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ h3 {
 #frog-pic {
     background: url("../images/frog-pixabay.jpg") no-repeat center center;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     /* sets the amination of the @keyframes below */
     animation-name: frog-zoom;
@@ -180,10 +180,11 @@ h3 {
   }
 
  #frog-outer{
-    height:630px;
+    height: 100%;
     width: 100%;
+    
     overflow: hidden;
-    position: relative;
+    position: absolute;
  }
 
   @keyframes frog-zoom{
@@ -202,7 +203,8 @@ footer {
     position: absolute;
     bottom: 0;
     padding-bottom: 0;
-    height: 80px;
+    height: 3.5rem;
+    width: 100%
  }
  .footer-row {
      text-align: center;
