--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,24 +77,23 @@ h3 {
     font-size: 2.5rem;
 }
 .pig-pic {
-    
     background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     min-height: 50vmin;
-    width: 100%;
-    margin-right: 4rem;
+    width: 50%;
+    margin-right: 5rem;
     margin-left: 10rem;
     
     z-index: -1;
 }
 
 .basic-details {
-    margin-left: 10rem;
+    margin-left:3rem;
     min-height: 30vmin;
-    width: 100%;
+    width: 50%;
     text-align: center;
     background-color: rgba(140, 249, 31, 0.7);
     font-weight: 700;
@@ -106,9 +105,8 @@ h3 {
     color:  #3f3f3f;
     background-color: #e57373;
     border-color:#e57373; 
-    bottom: -20px;
-    left: 280px;
-    min-height: 60px;
+    margin-left:2rem;
+    min-height: 5vmin;
     width: 200%;
     text-align: center;
     font-weight: 700;
@@ -157,6 +155,7 @@ h3 {
 .food-pic {
     background: url("../images/breakfast-oat-unsplash.jpg") no-repeat center center;
     background-size: cover;
+    
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
