--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,10 +165,9 @@ h3 {
  }
 
 .why-text {
-    
-    width: 100%;  
     color: #3f3f3f;
-    margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 1rem;
     padding-left: 5%;
     padding-right: 5%;
     overflow-y: scroll;
