--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,7 @@ h3 {
 .why-text {
     color: #3f3f3f;
     text-align: center;
+    font-size: 1rem;
     margin-bottom: 1rem;
     padding-left: 5%;
     padding-right: 5%;
