--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,8 +224,7 @@ h3 {
     background-size: cover;
     min-height: 100vh;
     width: 100%;
-    margin: 0;
-    padding: 0;
+   
     /* sets the amination of the @keyframes below */
     animation-name: frog-zoom;
     animation-duration: 5s;
@@ -233,7 +232,7 @@ h3 {
     
   }
 
- #frog-outer{
+   #frog-outer{
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -249,6 +248,19 @@ h3 {
     }
   }
 
+.signup-form{
+  margin-top: 150px;
+  color: #fff;
+ 
+  max-width: 40%;
+  position: absolute;
+  right: 10%;
+  padding: 30px;
+}
+
+.signup-form h2 {
+    color: #e57373;
+}
 /* ------------------------- Footer */
 
 footer {
