change text colour of form to a darker grey

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,11 +224,12 @@ h3 {
     background-size: cover;
     min-height: 100vh;
     width: 100%;
-   
+    margin: 0;
     /* sets the amination of the @keyframes below */
     animation-name: frog-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
+    
  }
 
    #frog-outer{
@@ -251,18 +252,10 @@ h3 {
     margin-top: 4rem;
     margin-bottom: 3rem;
     font-size: 1.5rem;
-    color: #3f3f3f;
+    
     max-width: 100%;
     text-align: center;
 }
-
-
-
-.support-option {
-    color:  #3f3f3f;
-}
-
-
 
 .signup-form h2 {
     color: #e57373;
@@ -270,15 +263,26 @@ h3 {
 }
 
 .text-input {
+    color: #20292e;
+    
     text-align: center;
     background-color: transparent;
-    border-color:transparent;
-   
+    border-color:transparent;  
+}
+.text-input::placeholder{
+    color: #20292e;
+     background-color: transparent;
+    border-color:transparent;  
+}
+
+.support-option {
+    color: #20292e;
 }
 
 .comm-option {
     color:  #e57373;
     font-size: 1.5rem;
+    font-weight: 600;
 }
 
 .signup-form .join-button {
